create bingo board using tables & generate random numbers for the board

--- a/static/index.html
+++ b/static/index.html
@@ -9,10 +9,58 @@
 </head>
 
 <body>
-    <h1>Multiplayer Bingo</h1>
+    <div>
+        <div id="header">
+            <h1>Multiplayer Bingo</h1>
+        </div>
+        <div id="content">
+            <table id="bingoTable">
+                <tr>
+                    <th class="bingoHeader">B</th>
+                    <th class="bingoHeader">I</th>
+                    <th class="bingoHeader">N</th>
+                    <th class="bingoHeader">G</th>
+                    <th class="bingoHeader">O</th>
+                </tr>
+                <tr>
+                    <td id="box0"> &nbsp;</td>
+                    <td id="box1"> &nbsp;</td>
+                    <td id="box2"> &nbsp;</td>
+                    <td id="box3"> &nbsp;</td>
+                    <td id="box4"> &nbsp;</td>
+                </tr>
+                <tr>
+                    <td id="box5"> &nbsp;</td>
+                    <td id="box6"> &nbsp;</td>
+                    <td id="box7"> &nbsp;</td>
+                    <td id="box8"> &nbsp;</td>
+                    <td id="box9"> &nbsp;</td>
+                </tr>
+                <tr>
+                    <td id="box10"> &nbsp;</td>
+                    <td id="box11"> &nbsp;</td>
+                    <td id="boxFree"> FREE</td>
+                    <td id="box12"> &nbsp;</td>
+                    <td id="box13"> &nbsp;</td>
+                </tr>
+                <tr>
+                    <td id="box14"> &nbsp;</td>
+                    <td id="box15"> &nbsp;</td>
+                    <td id="box16"> &nbsp;</td>
+                    <td id="box17"> &nbsp;</td>
+                    <td id="box18"> &nbsp;</td>
+                </tr>
+                <tr>
+                    <td id="box19"> &nbsp;</td>
+                    <td id="box20"> &nbsp;</td>
+                    <td id="box21"> &nbsp;</td>
+                    <td id="box22"> &nbsp;</td>
+                    <td id="box23"> &nbsp;</td>
+                </tr>
+            </table>
+        </div>
 
-
-    <script src='./client.js'></script>
+        <script src='./client.js'></script>
 </body>
 
 </html>
