add sockets to add new player and display all online users

--- a/static/index.html
+++ b/static/index.html
@@ -20,6 +20,11 @@
         <div id="header">
             <h1>Multiplayer Bingo</h1>
         </div>
+
+        <div id="user-list">
+            <ul>Current users:</ul>
+        </div>
+
         <div id="content">
             <table id="bingoTable">
                 <tr>
