--- a/static/index.html
+++ b/static/index.html
@@ -11,6 +11,8 @@
 </head>
 
 <body>
+    <h1 id="winner" style="font-size: 64px; text-align: center;"></h1>
+
     <form class="user-creation-form">
         <input id="player-name-input" placeholder="name"></input>
         <button id="create-player">Enter Game</button>
@@ -35,44 +37,44 @@
                     <th class="bingoHeader">O</th>
                 </tr>
                 <tr>
-                    <td id="box0"> &nbsp;</td>
-                    <td id="box1"> &nbsp;</td>
-                    <td id="box2"> &nbsp;</td>
-                    <td id="box3"> &nbsp;</td>
-                    <td id="box4"> &nbsp;</td>
+                    <td id="box0" class="x1-y5"> &nbsp;</td>
+                    <td id="box1" class="x2-y5"> &nbsp;</td>
+                    <td id="box2" class="x3-y5"> &nbsp;</td>
+                    <td id="box3" class="x4-y5"> &nbsp;</td>
+                    <td id="box4" class="x5-y5"> &nbsp;</td>
                 </tr>
                 <tr>
-                    <td id="box5"> &nbsp;</td>
-                    <td id="box6"> &nbsp;</td>
-                    <td id="box7"> &nbsp;</td>
-                    <td id="box8"> &nbsp;</td>
-                    <td id="box9"> &nbsp;</td>
+                    <td id="box5" class="x1-y4"> &nbsp;</td>
+                    <td id="box6" class="x2-y4"> &nbsp;</td>
+                    <td id="box7" class="x3-y4"> &nbsp;</td>
+                    <td id="box8" class="x4-y4"> &nbsp;</td>
+                    <td id="box9" class="x5-y4"> &nbsp;</td>
                 </tr>
                 <tr>
-                    <td id="box10"> &nbsp;</td>
-                    <td id="box11"> &nbsp;</td>
-                    <td id="boxFree">FREE</td>
-                    <td id="box12"> &nbsp;</td>
-                    <td id="box13"> &nbsp;</td>
+                    <td id="box10" class="x1-y3"> &nbsp;</td>
+                    <td id="box11" class="x2-y3"> &nbsp;</td>
+                    <td id="boxFree" class="x3-y3">FREE</td>
+                    <td id="box12" class="x4-y3"> &nbsp;</td>
+                    <td id="box13" class="x5-y3"> &nbsp;</td>
                 </tr>
                 <tr>
-                    <td id="box14"> &nbsp;</td>
-                    <td id="box15"> &nbsp;</td>
-                    <td id="box16"> &nbsp;</td>
-                    <td id="box17"> &nbsp;</td>
-                    <td id="box18"> &nbsp;</td>
+                    <td id="box14" class="x1-y2"> &nbsp;</td>
+                    <td id="box15" class="x2-y2"> &nbsp;</td>
+                    <td id="box16" class="x3-y2"> &nbsp;</td>
+                    <td id="box17" class="x4-y2"> &nbsp;</td>
+                    <td id="box18" class="x5-y2"> &nbsp;</td>
                 </tr>
                 <tr>
-                    <td id="box19"> &nbsp;</td>
-                    <td id="box20"> &nbsp;</td>
-                    <td id="box21"> &nbsp;</td>
-                    <td id="box22"> &nbsp;</td>
-                    <td id="box23"> &nbsp;</td>
+                    <td id="box19" class="x1-y1"> &nbsp;</td>
+                    <td id="box20" class="x2-y1"> &nbsp;</td>
+                    <td id="box21" class="x3-y1"> &nbsp;</td>
+                    <td id="box22" class="x4-y1"> &nbsp;</td>
+                    <td id="box23" class="x5-y1"> &nbsp;</td>
                 </tr>
             </table>
         </div>
 
-        <div style="display: flex; justify-content: center;">
+        <div id="game-controls" style="display: flex; justify-content: center;">
             <button id="start-game">Begin the game!</button>
             <h3 id="bingoNumber"></h3>
         </div>
