--- a/static/index.html
+++ b/static/index.html
@@ -23,6 +23,8 @@
             <h1>Multiplayer Bingo</h1>
         </div>
 
+        <div id="your-name" style="text-align: center;"></div>
+
         <div id="user-list">
             <ul>Current users:</ul>
         </div>
