(stretch) limit room

--- a/static/index.html
+++ b/static/index.html
@@ -11,6 +11,16 @@
 </head>
 
 <body>
+    <!-- *** testing connection -->
+    <div class="player p1">
+        Player 1
+        <div class="connected">Connected <span> </span></div>
+    </div>
+    <div class="player p2">
+        Player 2
+        <div class="connected">Connected <span> </span></div>
+    </div>
+
     <h1 id="winner" style="font-size: 64px; text-align: center;"></h1>
 
     <form class="user-creation-form">
