timer at the very bottom

--- a/static/index.html
+++ b/static/index.html
@@ -22,7 +22,7 @@
     </div>
 
     <h1 id="winner" style="font-size: 64px; text-align: center;"></h1>
-
+    
     <form class="user-creation-form">
         <input id="player-name-input" placeholder="name"></input>
         <button id="create-player">Enter Game</button>
@@ -90,6 +90,9 @@
             <button id="start-game">Begin the game!</button>
             <h3 id="bingoNumber"></h3>
         </div>
+        <!-- *** check out css for #countdown -->
+        <div id="countdown">5</div>
+
 </body>
 
 </html>
