Deleted countdown CSS. Add "Todo"

--- a/static/index.html
+++ b/static/index.html
@@ -90,7 +90,7 @@
             <button id="start-game">Begin the game!</button>
             <h3 id="bingoNumber"></h3>
         </div>
-        <!-- *** check out css for #countdown -->
+        <!-- *** ToDo: Fix Font Alignment *** -->
         <div id="countdown">5</div>
 
 </body>
