send user an email if they win

--- a/static/index.html
+++ b/static/index.html
@@ -25,6 +25,7 @@
     
     <form class="user-creation-form">
         <input id="player-name-input" placeholder="name"></input>
+        <input id="player-email" type="email" placeholder="Enter Email"></input>
         <button id="create-player">Enter Game</button>
     </form>
 
