re-add begin timer for all users on game start

--- a/static/index.html
+++ b/static/index.html
@@ -19,7 +19,7 @@
 
 <body>
     <!-- *** Testing all Audios Delete This script section -->
-    <!-- <script>
+    <script>
         function next() {
             var file = './sound/next.mp3'
             let mp3 = new Audio(file);
@@ -52,7 +52,7 @@
 
 
     </script>
-    <button onclick="match()">Match Audio</button>
+    <!-- <button onclick="match()">Match Audio</button>
     <button onclick="next()">Next Audio</button>
     <button onclick="win()">Win Audio</button> -->
    
